plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '1.0.13'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = mod_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neoforge_version

    mods {
        modularbees {
            sourceSet sourceSets.main
        }
    }

    runs {
        client {
            client()
        }

        server {
            server()
        }

        gametestWorld {
            client()
            programArguments.addAll("--username", "Dev", "--quickPlaySingleplayer", "GametestWorld")
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        gametest {
            type = "gameTestServer"
            gameDirectory = project.file("build/gametest")
        }

    }

}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

repositories {
    maven {
        name 'cursemaven'
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Modmaven"
        url = uri("https://modmaven.dev/")
    }
    maven {
        name = "cc"
        url = "https://maven.squiddev.cc"
    }
    mavenCentral()
}

dependencies {
    implementation "io.github.glodblock:Glodium:1.21-2.2-neoforge"
    implementation "curse.maven:productivebees-377897:7455903"
    implementation files("libs/productivelib.jar")
    implementation "mezz.jei:jei-1.21.1-neoforge:19.21.0.247"
    implementation "vazkii.patchouli:Patchouli:1.21-87-NEOFORGE"
    compileOnly "cc.tweaked:cc-tweaked-1.21.1-forge:1.113.1"
    compileOnly "mekanism:Mekanism:1.21.1-10.7.9.72"
    compileOnly "org.appliedenergistics:appliedenergistics2:19.2.17"
    // runtime test
    runtimeOnly "curse.maven:jade-324717:7545219"
    runtimeOnly "mekanism:Mekanism:1.21.1-10.7.0.55"
    runtimeOnly "cc.tweaked:cc-tweaked-1.21.1-forge:1.113.1"
    runtimeOnly "org.appliedenergistics:appliedenergistics2:19.2.17"
    runtimeOnly "org.appliedenergistics:guideme:21.1.1"
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
            neo_version         : neoforge_version, neo_version_range: neoforge_version_range,
            loader_version_range: loader_version_range,
            mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors         : mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }

    exclude(".cache/**")
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.named('jar') {
    exclude 'com/glodblock/github/**/datagen/**'
}
